[project]
name = "national-boundaries-api"
version = "1.0.0"
description = "National Boundaries and Addresses API of Lithuania"
authors = [{ name = "Karolis VyÄius", email = "karolis@vycius.lt" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.125,<0.126",
    "uvicorn>=0.38.0,<0.39",
    "fastapi-pagination>=0.15.3,<0.16",
    "sqlalchemy>=2.0.30,<3",
    "geoalchemy2>=0.18.1,<0.19",
    "sentry-sdk[fastapi, sqlalchemy]>=2.5.1,<3",
    "sqlean-py>=3.45.1,<4",
    "sqlakeyset>=2.0.1716332987,<3",
    "gunicorn>=23.0.0,<24",
    "uvicorn-worker>=0.4.0,<0.5",
    "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "httpx>=0.28.0,<0.29",
]
